Fix "ask and wait" prompt color in dark mode

--- a/src/components/question/question.css
+++ b/src/components/question/question.css
@@ -14,7 +14,7 @@
     font-size: 0.75rem;
     font-weight: bold;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: $text-primary;
+    color: $text-primary-light;
     padding-bottom: $space;
 }
 
